# wasm-text-analyzer

./: Cargo.toml  README.md
docs/: index.js  text_analysis_tool.d.ts  text_analysis_tool.js  text_analysis_tool_bg.wasm  text_analysis_tool_bg.wasm.d.ts
src/: lib.rs
www/: index.html  styles.css
