[package]
name = "text-analysis-tool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "console"
]}

[profile.release]
opt-level = "s"

